# edgeserver

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  documentation.md  edgeserver.code-workspace  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.changeset/: big-grapes-retire.md  blue-olives-protect.md  chilled-kiwis-fly.md  chilly-dots-approve.md  cold-olives-serve.md  config.json  curly-squids-yawn.md  curvy-eels-drum.md  dry-ants-fly.md  early-bats-happen.md  eight-ties-shop.md  fair-mugs-smell.md  famous-items-shake.md  (+35 more)
engine/: .env.example  Cargo.toml  Dockerfile.scratch  build.rs  compose.yaml  cross.toml  shell.nix
engine/.sqlx/: query-01d743672de20cb705d2925250d97d59055210764de52b821551c365c845b272.json  query-05e75136fada81781aa3ff8180e37ebc2b847744b9e531fd7a447b23185e8e26.json  query-077804b97379a3c0dc7be7d38f2e56d5c9c3cbd592af73ad3358cdcc319c9881.json  query-0913f9636bef0e78fa1c02cee51b991a631eb027d7d28dc7ae315b29be4daa33.json  query-0fe56a8b64ba4a1b96dd176df3c3d5db112dfe5f4ff75de9838b17c3e98ee491.json  query-1008fa21a7dfc8114e90af7983cf715b0d123a55b07364edc1ad5be045002b93.json  query-1312791e3e60258d008a12c9fa61b1dd273e61432048ace91ddf0dbc4a8ccb3c.json  query-148369c8e7f2e8857e1f14c609ffb1a494e0277eafb39df7c43dd9b220025ce8.json  query-181384aaec76c2a8be870975b772820cb2afe3215b33cbfa56d5ca29cca1eb1b.json  query-1856251d015f5d0be598a88aa70f50c0b9c8ad7fc5228d98dc324715f9cdc979.json  query-1a39b710b35c18f34076d157fce077e2c467efc24d33818dfa6a48ccc7b31a5e.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-24f1e265789e15282e233ed8de783574702171b6e4b0174b40aa376f219d3972.json  query-25c2fcbab7b9c93c8331dbd6c4bfae31fb4970569dd85a904bbe8eef99f332f5.json  query-28adef2812f7762fafbe52c4c0bbd090ce5ea95b78d5cd8b823c44ebf26e9994.json  query-3878d3b1cd6987008a77f2e8b332f38d572cd556c2d921d0a7b8ff5769b51786.json  query-4ad6697f4503a34872eb40ffb715c022ed42c23e3490fe56359180edd8d09448.json  query-4c7759a3f1491336637b4bb4ec722150aba7614c5b855ad6fbf737012f6ca76f.json  query-4e529a565e5b1ff8a04d591894f532eb131125a58e4d2d194eb5422fbe035c11.json  query-518c67b86c125a448a79d9c0407d7617f87234faee12f36762d9680935fa0e25.json  query-53c27a02f86fd4466e2b9e6fe05898576c80f7d917107cc2a7c2ecb01d25c91c.json  query-586c6d6b0c6fe5f3b83f1ee21badfb97d7e69b396bf78005d5bce40249b509c5.json  query-5c960227b225a6ecf280a18a5a07af798d6e361b745bf0f2a04286538798f72b.json  query-628f41d8644ae0f1497dd8a0063da9b68f88d4693f9cfb9f9bfe4269e43792d2.json  query-633148aa2542fcd5642f0f9d2bf99cc7a0bb5967e84e255aaba7720af2ebd196.json  query-640a3e4131ebb0a00146b2b7bd7dff1f4a2318e474f5b495b9aae7f0a1902a27.json  query-6465fc378e6d49860738cef4aaff1f10cb3b27375ed7e2364b890a4fc69ad7fc.json  query-662512fa967d128c21d94c2a19915298f98661f0f78d42fe0471fb205c520082.json  query-67a9dec4afb27978967b76a27218965537dffc57dcc81eca011d0e0dd66ab856.json  query-68b71e3d0bfb0750d73089b75e80998d7f8dc6ee59053dcb6fc10251591165b5.json  query-6976566ee94dc7bef7c7bcbc56ae1c39da50ba709b220f50225f76362ab26e79.json  query-6b27d52e959d8206c20700c0f467a9a9f68268e5fa0bf376530eed0b15497df2.json  query-6c738dadfaae0e98c2c52a31cb4dcac7077ae50dc1e1f82fc6aa88dad4714b6d.json  query-6fbcea6f1c56d4c83d72b4077fab381ab854201a66c0cfa28ce8d5a967fd5067.json  query-6ffee00d51cba01647530222f70cca5cc4697b040fc91519b822ecfdb6d14a7d.json  query-722a27706949a63e29ee701c1578dccd98720a5025e8713b3d382e3282371c39.json  query-73492fe86de737ee7ba2eb92f70cfdd118ddf0b278a5f4f75b307acf2d0cfb20.json  query-73c17b2964e6fdbbfe600c687110004c85905d2f75128538a1f7aa267b05b6f9.json  query-759839243c383e09c46d43588d10c4a6195a55d44d060be324b860ec5a4c1398.json  query-7727a042c9f30a8943521ece22c665a9acaef1438a993403c6019eaa60886fdf.json  (+51 more)
engine/migrations/: 0001_init.sql  0002_wildcard_invite.sql  0003_admin.sql  0004_deployment_files.sql  0005_file_delete.sql  0006_file_retention.sql  0007_file_size.sql  0008_deployment_context.sql  0009_file_deletion.sql  0010_avatars.sql  0011_domains.sql  0012_deployment_previews.sql  0013_deployment_preview_multi.sql  0014_deployment_preview_favicon.sql  0015_keys.sql  0016_deployment_ipfs.sql  0017_domain_active_deployment.sql
engine/src/: cache.rs  database.rs  main.rs  rabbit.rs  sqlxshim.rs  state.rs  storage.rs
engine/src/assets/: mod.rs
engine/src/cache/: mod.rs
engine/src/handlers/: mod.rs
engine/src/handlers/car/: mod.rs
engine/src/handlers/preview/: mod.rs
engine/src/ipfs/: mod.rs
engine/src/middlewares/: auth.rs  metrics.rs  mod.rs  tracing.rs
engine/src/models/: deployment.rs  keys.rs  mod.rs  site.rs  team.rs  user.rs
engine/src/models/deployment/: mod.rs  preview.rs
engine/src/models/domain/: mod.rs
engine/src/models/session/: mod.rs
engine/src/models/team/: invite.rs  mod.rs
engine/src/models/user/: mod.rs
engine/src/routes/: 404.html  README.md  error.rs  index.html  mod.rs  system.rs
engine/src/routes/auth/: mod.rs
engine/src/routes/invite/: accept.rs  get.rs  mod.rs
engine/src/routes/site/: mod.rs
engine/src/routes/site/deployments/: mod.rs
engine/src/routes/site/domains/: mod.rs
engine/src/routes/site/keys/: mod.rs
engine/src/routes/team/: mod.rs
engine/src/routes/team/keys/: mod.rs
engine/src/routes/user/: mod.rs
engine/src/routes/user/keys/: mod.rs
engine/src/server/: 404.html  mod.rs  not_found.rs
engine/src/utils/: build_info.rs  hash.rs  id.rs  mod.rs
engine/src/utils/beta/: sqlxshim.rs
services/router/: .env.example  Cargo.toml  Dockerfile
services/router/src/: environment.rs  main.rs  server.rs  state.rs
services/router/src/cache/: fastentry.rs  mod.rs
services/router/src/database/: mod.rs
services/router/src/legacy/: mod.rs
services/router/src/log/: mod.rs
services/router/src/metrics/: mod.rs  route.rs
services/router/src/network/: measure.rs  mod.rs  resolve.rs  route.rs  util.rs
services/router/src/routing/: mod.rs  route.rs
services/router/src/storage/: http.rs  minio.rs  mod.rs
(+761 files in other folders)
