[package]
name = "edgeserver"
version = "2.0.0-beta.1"
edition = "2021"

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx.git", features = [
    "runtime-async-std",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
tracing = "0.1.41"
# anyhow = "1.0.95"
color-eyre = "0.6.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
config = "0.15.4"
dotenvy = "0.15.7"
futures = "0.3.31"
poem = { version = "3.1.6", git = "https://github.com/poem-web/poem", branch = "master", features = [
    "rustls",
    "sse",
    "tempfile",
    "opentelemetry",
    "requestid"
] }
poem-openapi = { version = "5.1.8", git = "https://github.com/poem-web/poem", branch = "master", features = [
    "chrono",
    "uuid",
    "sqlx",
    "url",
    "email",
    "email_address",
    "redoc",
    "static-files",
] }
serde = "1.0.217"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
url = { version = "2.5.2", features = ["serde"] }
thiserror = "2.0.3"
rustls = "0.23.19"
bigdecimal = { version = "0.4.5", features = ["serde"] }
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    # Add back the default features excluding native-tls
    "charset",
    "http2",
    "macos-system-configuration",
], default-features = false }
chrono = "0.4.39"
serde_with = { version = "3.9.0", features = ["json", "chrono"] }
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
ipnetwork = "0.20.0"
rust-s3 = { version = "0.36.0-beta.2", default-features = false, features = [
    "async-std-rustls-tls",
] }
aws-sdk-s3 = "1.64.0"
aws-config = "1.5.10"
async_zip = { version = "0.0.17", features = ["bzip2", "lzma", "zstd", "xz", "deflate"] }
dashmap = { version = "6.1.0", features = ["serde"] }
serde_json = "1.0.138"
moka = { version = "0.12.10", features = ["future"] }
infer = "0.19.0"
# tokio = { version = "1.39.0", features = [""], default-features = false}
tracing-opentelemetry = "0.29.0"
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry_sdk = {version = "0.28.0", features = ["trace", "rt-async-std"]}
opentelemetry = { version = "0.28.0", features = ["trace"]}
opentelemetry-stdout = "0.28.0"
opentelemetry-http = "0.28.0"
opentelemetry-semantic-conventions = "0.28.0"
regex = "1.11.1"
figment = { version = "0.10.19", features = ["env", "json"] }
lapin = "2.5.1"
log = "0.4.27"
tracing-log = "0.2.0"
ipld-core = { version = "0.4.2", features = ["serde"] }
serde_cbor = "0.11.2"
multihash = { version = "0.19.3", features = ["serde"] }
rust-car = "0.1.4"
cid = "0.11.1"
walkdir = "2.4.0"
rand = "0.9.0"
build-info = "0.0.33"

[build-dependencies]
build-info-build = "0.0.33"
