[package]
name = "router"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
http = "0.2.9"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
redis = { version = "0.22.3", features = ["aio", "ahash", "tokio-comp"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }

# Metrics & Traces
prometheus-core = { package = "prometheus", version = "0.13" }
opentelemetry = { version = "0.18", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.11"
opentelemetry-otlp = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.18", features = ["async-trait"] }
atty = "0.2"

# opentelemetry-http = { version = "0.8.0", features = ["hyper", "tokio", "reqwest"] }
opentelemetry-jaeger = { version = "0.17.0", features = [
    "rt-tokio",
], default-features = false }
ahash = "0.8.3"
base64 = "0.21.0"
blake = "2.0.2"
thousands = "0.2.0"
reqwest = { version = "0.11.16", features = ["stream"] }
envy = "0.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
dotenvy = "0.15.7"

